--- a/src/app/game-display/game-display.component.html
+++ b/src/app/game-display/game-display.component.html
@@ -2,7 +2,7 @@
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" *ngFor="let game of games; index as i; first as isFirst"
-       data-slide-to="0" [ngClass]="{'active': isFirst}"></li>
+       attr.data-slide-to="{{i}}" [ngClass]="{'active': isFirst}"></li>
       
     </ol>
     <div class="carousel-inner" >
